--- a/nostr-client/index.html
+++ b/nostr-client/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html><html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nostr Client Grundgerüst</title>
+  <!-- Favicon als Data-URI, um 404 für /favicon.ico zu vermeiden -->
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
     #events { max-height: 400px; overflow-y: auto; border: 1px solid #ccc; padding: 10px; }
@@ -14,21 +16,18 @@
 <body>
   <h1>Nostr-Client Grundgerüst (NIP-01 & NIP-19)</h1>
   <label>Schlüssel (hex priv / nsec / npub):</label>
-  <input id="keyInput" placeholder="z.B. nsec1... oder npub1... oder 32-Byte-Hex" /><label>Relay-URLs (optional, eine URL pro Zeile):</label>
+  <input id="keyInput" placeholder="z.B. nsec1... oder npub1... oder 32-Byte-Hex"><label>Relay-URLs (optional, eine URL pro Zeile):</label>
 
   <textarea id="relayUrls" rows="2" placeholder="z.B. wss://relay.example.com"></textarea><button id="connectBtn">Verbinden</button>
 
   <h2>Abonnierte Events</h2>
   <div id="events"></div>  <h2>Neue Nachricht senden</h2>
   <textarea id="msgContent" rows="3" placeholder="Dein Text hier..."></textarea>
-  <button id="sendBtn" disabled>Senden</button>  <!-- nostr-tools einbinden -->  <script src="https://unpkg.com/nostr-tools@1.5.0/dist/nostr-tools.umd.js"></script>  <script>
+  <button id="sendBtn" disabled>Senden</button>  <!-- nostr-tools UMD-Bundle einbinden -->  <script src="https://unpkg.com/nostr-tools@1.5.0/bundles/nostr-tools.umd.min.js"></script>  <script>
     (function() {
       const { Relay, getEventHash, signEvent, utils: { getPublicKey }, nip19 } = nostrTools;
       const defaultRelays = ['wss://nostr.mom', 'wss://nostr.wine'];
-      let relays = [];
-      let filters = [];
-      let privHex = null;
-      let pubHex = null;
+      let relays = [], filters = [], privHex = null, pubHex = null;
 
       const keyInput = document.getElementById('keyInput');
       const urlsInput = document.getElementById('relayUrls');
@@ -38,25 +37,18 @@
       const sendBtn = document.getElementById('sendBtn');
 
       function parseKey(input) {
-        privHex = null;
-        pubHex = null;
+        privHex = null; pubHex = null;
         if (!input) return;
         const val = input.trim();
         try {
           if (val.startsWith('nsec')) {
             const { type, data } = nip19.decode(val);
-            if (type === 'nsec') {
-              privHex = data;
-              pubHex = getPublicKey(privHex);
-            }
+            if (type === 'nsec') { privHex = data; pubHex = getPublicKey(privHex); }
           } else if (val.startsWith('npub')) {
             const { type, data } = nip19.decode(val);
-            if (type === 'npub') {
-              pubHex = data;
-            }
+            if (type === 'npub') { pubHex = data; }
           } else if (/^[0-9a-fA-F]{64}$/.test(val)) {
-            privHex = val;
-            pubHex = getPublicKey(privHex);
+            privHex = val; pubHex = getPublicKey(privHex);
           }
         } catch (e) {
           console.warn('Decoding NIP-19 fehlgeschlagen:', e);
@@ -64,33 +56,24 @@
       }
 
       async function connectRelays() {
-        // parse key
         parseKey(keyInput.value);
-        // determine relay URLs
-        const inputUrls = urlsInput.value
-          .split('\n')
-          .map(l => l.trim())
-          .filter(l => l);
+        const inputUrls = urlsInput.value.split('\n').map(l => l.trim()).filter(l => l);
         const urls = inputUrls.length > 0 ? inputUrls : defaultRelays;
 
-        // clear old
-        relays.forEach(r => r.close());
-        relays = [];
+        relays.forEach(r => r.close()); relays = [];
         eventsDiv.innerHTML = '';
 
         try {
-          // connect
           relays = urls.map(u => Relay(u));
           await Promise.all(relays.map(r => r.connect()));
-          connectBtn.textContent = 'Verbunden';
-          connectBtn.disabled = true;
 
-          // set filters: if pubHex use author filter, else global kind 1
+          connectBtn.textContent = 'Verbunden'; connectBtn.disabled = true;
+
+          // Setze Filter: mit pubHex oder global kind 1
           filters = pubHex ? [{ authors: [pubHex] }] : [{ kinds: [1] }];
-          // subscribe
           relays.forEach(r => {
-            const sub = r.sub(filters);
-            r.on('event', (ev, subId) => {
+            r.sub(filters);
+            r.on('event', ev => {
               const el = document.createElement('div');
               el.className = 'event';
               el.textContent = `[${new Date(ev.created_at * 1000).toLocaleString()}] ${ev.content}`;
@@ -98,7 +81,6 @@
             });
           });
 
-          // send button
           sendBtn.disabled = !privHex;
         } catch (e) {
           console.error('Fehler beim Verbinden:', e);
@@ -106,28 +88,14 @@
         }
       }
 
-      // on user click
       connectBtn.addEventListener('click', connectRelays);
-      // automatically on load for read-only
-      window.addEventListener('DOMContentLoaded', () => connectRelays());
+      window.addEventListener('DOMContentLoaded', connectRelays);
 
       sendBtn.addEventListener('click', async () => {
-        if (!privHex) {
-          alert('Senden nur mit privatem Schlüssel (nsec / hex).');
-          return;
-        }
+        if (!privHex) { alert('Senden nur mit privatem Schlüssel (nsec / hex).'); return; }
         const content = contentInput.value.trim();
-        if (!content) {
-          alert('Bitte erst Text eingeben.');
-          return;
-        }
-        const event = {
-          kind: 1,
-          pubkey: pubHex,
-          created_at: Math.floor(Date.now() / 1000),
-          tags: [],
-          content,
-        };
+        if (!content) { alert('Bitte erst Text eingeben.'); return; }
+        const event = { kind: 1, pubkey: pubHex, created_at: Math.floor(Date.now()/1000), tags: [], content };
         event.id = getEventHash(event);
         event.sig = await signEvent(event, privHex);
         relays.forEach(r => r.publish(event));
